# resort_to_grow

./: .gitignore  README.md  personalize.sh  setup-autostart.sh  test-mode.sh  uninstall.sh
app/: package.json  vite.config.js
app/src/: config.js  index.html  main.js  styles.css
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: main.rs
app/src/images/: README.md
config-ui/: app.js  index.html  server.py  styles.css
dashboard/: index.html  server.py
