[package]
name = "accountability-app"
version = "1.0.0"
description = "A brutalist accountability application"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[dependencies]
tauri = { version = "2.0.0-rc", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
dirs = "5"

[features]
custom-protocol = ["tauri/custom-protocol"]
